fixed spacing issues with comment section being too close to next question

--- a/app/assets/stylesheets/questions-page.scss
+++ b/app/assets/stylesheets/questions-page.scss
@@ -11,6 +11,8 @@ body {
     margin-top: 2em;
     margin-bottom: 2em;
     text-align: center;
+    position: relative;
+    top: 40px;
   }
 
   #question-card-container {
